# bilibili-downloader

./: .gitignore  Cargo.toml
.claude/: settings.local.json
src/: crawler.rs  download.rs  logger.rs  main.rs  video.rs  video_info.rs
src/bilibili/: initial_state.rs  mod.rs  title.rs  video.rs  video_info.rs
src/bilibili/api/: bv.rs
