[package]
name = "bilibili-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0.4"
dialoguer = "0.11.0"
flate2 = "1.0.28"
reqwest = { version = "0.11.22", features = ["json"] }
scraper = "0.17.1"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
