[package]
name = "bilibili-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0.4"
flate2 = "1.0.28"
reqwest = { version = "0.11.22", features = ["json"] }
scraper = "0.17.1"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
swc_ecma_parser = { version = "5.0.0" }
swc_ecma_ast = { version = "4.0.1" }
swc_common = { version = "4.0.1", features = ["tty-emitter"] }
swc_ecmascript = { version = "6.0.0", features = ["visit"] }

[dev-dependencies]
tempdir = "0.3.7"
mockall = "0.12.1"
